--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <div class="page-wrapper">
         <fin-header></fin-header>
         <div class="drawer-overlay"></div>
-        <div ng-view autoscroll="true"></div></div>
+        <div ng-view autoscroll="true"></div>
     </div>
     <fin-drawer></fin-drawer>
     <!--Library Files Start-->
