Started with riskassesment

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Finaskus</title>
     <link rel="stylesheet" type="text/css" href="libs/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -29,13 +30,14 @@
     <script type="text/javascript" src="libs/angular-resource.min.js"></script>
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angular-sanitize.min.js"></script>
-    
+    <script type="text/javascript" src="libs/swiper.jquery.min.js"></script> 
     <!--Library Files End-->
     <!-- Main File-->
     <script type="text/javascript" src="app.js"></script>
     <!-- Main File-->
     <!--Common Module Start-->
     <script type="text/javascript" src="modules/common/directives/appDirectives.js"></script>
+    <script type="text/javascript" src="modules/common/directives/swiper.directives.js"></script>
     <script type="text/javascript" src="modules/common/config/appConfig.js"></script>
     <script type="text/javascript" src="modules/common/config/appText.js"></script>
     <script type="text/javascript" src="modules/common/services/appServices.js"></script>
@@ -45,5 +47,9 @@
     <script type="text/javascript" src="modules/authentication/controllers/authController.js"></script>
     <script type="text/javascript" src="modules/authentication/services/authService.js"></script>
     <!--Authentication Module End-->
+    <!--Risk Assesment Start-->
+    <script type="text/javascript" src="modules/riskassesment/riskConfig.js"></script>
+    <script type="text/javascript" src="modules/riskassesment/controllers/riskController.js"></script>
+    <!--Risk Assesment End-->
   </body>
 </html>
