Done riskassest module and login and register screens

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="libs/swiper.jquery.min.js"></script> 
+    <script type="text/javascript" src="libs/angular-lazy-img.min.js"></script>    
     <!--Library Files End-->
     <!-- Main File-->
     <script type="text/javascript" src="app.js"></script>
@@ -47,8 +48,14 @@
     <script type="text/javascript" src="modules/authentication/controllers/authController.js"></script>
     <script type="text/javascript" src="modules/authentication/services/authService.js"></script>
     <!--Authentication Module End-->
+    <!--Registration Module Start-->
+    <script type="text/javascript" src="modules/registration/registerConfig.js"></script>
+    <script type="text/javascript" src="modules/registration/services/registerService.js"></script>
+    <script type="text/javascript" src="modules/registration/controllers/registerController.js"></script>
+    <!--Registration Module End-->
     <!--Risk Assesment Start-->
     <script type="text/javascript" src="modules/riskassesment/riskConfig.js"></script>
+    <script type="text/javascript" src="modules/riskassesment/services/riskassesmentService.js"></script>
     <script type="text/javascript" src="modules/riskassesment/controllers/riskController.js"></script>
     <!--Risk Assesment End-->
   </body>
