Added regsitration and otp screens

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="libs/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="libs/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <!-- <link rel="stylesheet" type="text/css" href="libs/animate.css"> -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
