Added registration and dashboard implementation

--- a/app/index.html
+++ b/app/index.html
@@ -59,5 +59,10 @@
     <script type="text/javascript" src="modules/riskassesment/services/riskassesmentService.js"></script>
     <script type="text/javascript" src="modules/riskassesment/controllers/riskController.js"></script>
     <!--Risk Assesment End-->
+    <!--DashBoard Module Start-->
+    <script type="text/javascript" src="modules/dashboard/dashboardConfig.js"></script>
+    <script type="text/javascript" src="modules/dashboard/services/dashboardService.js"></script>
+    <script type="text/javascript" src="modules/dashboard/controllers/dashboardController.js"></script>
+    <!--DashBoard Module End-->
   </body>
 </html>
