Completed plan investment UI

--- a/app/index.html
+++ b/app/index.html
@@ -64,5 +64,10 @@
     <script type="text/javascript" src="modules/dashboard/services/dashboardService.js"></script>
     <script type="text/javascript" src="modules/dashboard/controllers/dashboardController.js"></script>
     <!--DashBoard Module End-->
+    <!--PlanInvestMent Module Start-->
+    <script type="text/javascript" src="modules/planinvestment/planInvestConfig.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/services/planInvestService.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/controllers/planInvestController.js"></script>
+    <!--PlanInvestMent Module End-->
   </body>
 </html>
