--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,11 @@
     <script type="text/javascript" src="modules/planinvestment/planInvestConfig.js"></script>
     <script type="text/javascript" src="modules/planinvestment/services/planInvestService.js"></script>
     <script type="text/javascript" src="modules/planinvestment/controllers/planInvestController.js"></script>
+    <!--Quick Invest Module Start-->
+    <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/quickInvestConfig.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/services/quickInvestService.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/controllers/quickInvestController.js"></script>
+    <!--Quick Invest Module End-->
     <!--PlanInvestMent Module End-->
   </body>
 </html>
