Added goals module

--- a/app/index.html
+++ b/app/index.html
@@ -74,5 +74,10 @@
     <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/controllers/quickInvestController.js"></script>
     <!--Quick Invest Module End-->
     <!--PlanInvestMent Module End-->
+    <!--Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/goalConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/services/goalService.js"></script>
+    <script type="text/javascript" src="modules/goals/controllers/goalController.js"></script>
+    <!--Goals Module End-->
   </body>
 </html>
