--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,11 @@
     <script type="text/javascript" src="modules/goals/goalConfig.js"></script>
     <script type="text/javascript" src="modules/goals/services/goalService.js"></script>
     <script type="text/javascript" src="modules/goals/controllers/goalController.js"></script>
+    <!--Retirement Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/retirement/retirementGoalConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/retirement/services/retirementGoalService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/retirement/controllers/retirementGoalController.js"></script>
+    <!--Retirement Goals Module End-->
     <!--Goals Module End-->
   </body>
 </html>
