--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
     <title>Finaskus</title>
     <link rel="stylesheet" type="text/css" href="libs/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="libs/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/datepicker.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!-- <link rel="stylesheet" type="text/css" href="libs/animate.css"> -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -33,6 +35,10 @@
     <script type="text/javascript" src="libs/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="libs/swiper.jquery.min.js"></script> 
     <script type="text/javascript" src="libs/angular-lazy-img.min.js"></script>    
+    <script src="libs/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="libs/scrollbars.min.js"></script>
+    <script src="libs/moment.min.js"></script>
+    <script src="libs/datepicker.js"></script>
     <!--Library Files End-->
     <!-- Main File-->
     <script type="text/javascript" src="app.js"></script>
@@ -73,6 +79,11 @@
     <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/services/quickInvestService.js"></script>
     <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/controllers/quickInvestController.js"></script>
     <!--Quick Invest Module End-->
+    <!--Tax saving Module Start-->
+    <script type="text/javascript" src="modules/planinvestment/modules/taxsaving/taxsavingConfig.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/modules/taxsaving/services/taxsavingService.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/modules/taxsaving/controllers/taxsavingController.js"></script>
+    <!--Tax saving Module End-->
     <!--PlanInvestMent Module End-->
     <!--Goals Module Start-->
     <script type="text/javascript" src="modules/goals/goalConfig.js"></script>
@@ -83,6 +94,41 @@
     <script type="text/javascript" src="modules/goals/modules/retirement/services/retirementGoalService.js"></script>
     <script type="text/javascript" src="modules/goals/modules/retirement/controllers/retirementGoalController.js"></script>
     <!--Retirement Goals Module End-->
+    <!--Education Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/education/educationConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/education/services/educationService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/education/controllers/educationController.js"></script>
+    <!--Education Goals Module End-->
+    <!--Property Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/property/propertyConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/property/services/propertyService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/property/controllers/propertyController.js"></script>
+    <!--Property Goals Module End-->
+    <!--Automobile Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/automobile/automobileConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/automobile/services/automobileService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/automobile/controllers/automobileController.js"></script>
+    <!--Automobile Goals Module End-->
+    <!--Vacation Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/vacation/vacationConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/vacation/services/vacationService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/vacation/controllers/vacationController.js"></script>
+    <!--Vacation Goals Module End-->
+    <!--Wedding Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/wedding/weddingConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/wedding/services/weddingService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/wedding/controllers/weddingController.js"></script>
+    <!--Wedding Goals Module End-->
+    <!--Others Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/others/othersConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/others/services/othersService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/others/controllers/othersController.js"></script>
+    <!--Others Goals Module End-->
     <!--Goals Module End-->
+    <!--Investor Register Module Start-->
+    <script type="text/javascript" src="modules/registerinvestor/registerInvestorConfig.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/services/registerInvestorService.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/controllers/registerInvestorController.js"></script>
+    <!--Investor Register Module Start-->
   </body>
 </html>
