--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <script src="libs/scrollbars.min.js"></script>
     <script src="libs/moment.min.js"></script>
     <script src="libs/datepicker.js"></script>
+    <script src="libs/highcharts.min.js"></script>
     <!--Library Files End-->
     <!-- Main File-->
     <script type="text/javascript" src="app.js"></script>
@@ -130,5 +131,10 @@
     <script type="text/javascript" src="modules/registerinvestor/services/registerInvestorService.js"></script>
     <script type="text/javascript" src="modules/registerinvestor/controllers/registerInvestorController.js"></script>
     <!--Investor Register Module Start-->
+    <!--Smart portfolio Module Start-->
+    <script type="text/javascript" src="modules/smartportfolio/smartConfig.js"></script>
+    <script type="text/javascript" src="modules/smartportfolio/services/recommendedService.js"></script>
+    <script type="text/javascript" src="modules/smartportfolio/controllers/recommendedController.js"></script>
+    <!--Smart portfolio Module End-->
   </body>
 </html>
