Added new feature

--- a/app/index.html
+++ b/app/index.html
@@ -136,5 +136,10 @@
     <script type="text/javascript" src="modules/smartportfolio/services/recommendedService.js"></script>
     <script type="text/javascript" src="modules/smartportfolio/controllers/recommendedController.js"></script>
     <!--Smart portfolio Module End-->
+    <!--Smart portfolio Module Start-->
+    <script type="text/javascript" src="modules/investwithdraw/investwithdrawConfig.js"></script>
+    <script type="text/javascript" src="modules/investwithdraw/services/investWithdrawService.js"></script>
+    <script type="text/javascript" src="modules/investwithdraw/controllers/investWithdrawController.js"></script>
+    <!--Smart portfolio Module End-->
   </body>
 </html>
