Added trackperformance screens

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
     <script type="text/javascript" src="modules/common/config/appConfig.js"></script>
     <script type="text/javascript" src="modules/common/config/appText.js"></script>
     <script type="text/javascript" src="modules/common/services/appServices.js"></script>
+    <script type="text/javascript" src="modules/common/filters/appFilters.js"></script>
     <!--Common Module End-->    
     <!--Authentication Module Start-->
     <script type="text/javascript" src="modules/authentication/authConfig.js"></script>
@@ -140,6 +141,11 @@
     <script type="text/javascript" src="modules/investwithdraw/investwithdrawConfig.js"></script>
     <script type="text/javascript" src="modules/investwithdraw/services/investWithdrawService.js"></script>
     <script type="text/javascript" src="modules/investwithdraw/controllers/investWithdrawController.js"></script>
+    <!--Smart portfolio Module End-->
+    <!--Smart portfolio Module Start-->
+    <script type="text/javascript" src="modules/trackperformance/trackPerformanceConfig.js"></script>
+    <script type="text/javascript" src="modules/trackperformance/services/trackPerformanceService.js"></script>
+    <script type="text/javascript" src="modules/trackperformance/controllers/trackPerformanceController.js"></script>
     <!--Smart portfolio Module End-->
   </body>
 </html>
