--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <div class="page-wrapper">
         <fin-header></fin-header>
         <div class="drawer-overlay"></div>
+        <fin-loader></fin-loader>
         <div ng-view autoscroll="true"></div>
     </div>
     <fin-drawer></fin-drawer>
