Added goal loading directive, new loader gif image after goal data input, added earnInterest module, implemented goalloading for automobile goal

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,11 @@
     <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/services/quickInvestService.js"></script>
     <script type="text/javascript" src="modules/planinvestment/modules/quickInvest/controllers/quickInvestController.js"></script>
     <!--Quick Invest Module End-->
+    <!--Earn Interest Module Start-->
+    <script type="text/javascript" src="modules/planinvestment/modules/earnInterest/earnInterestConfig.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/modules/earnInterest/services/earnInterestService.js"></script>
+    <script type="text/javascript" src="modules/planinvestment/modules/earnInterest/controllers/earnInterestController.js"></script>
+    <!--Earn Interest Module End-->
     <!--Tax saving Module Start-->
     <script type="text/javascript" src="modules/planinvestment/modules/taxsaving/taxsavingConfig.js"></script>
     <script type="text/javascript" src="modules/planinvestment/modules/taxsaving/services/taxsavingService.js"></script>
