Added Signiture functionality

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,8 @@
     <script src="libs/moment.min.js"></script>
     <script src="libs/datepicker.js"></script>
     <script src="libs/highcharts.min.js"></script>
+    <script src="libs/signature_pad.min.js"></script>
+    <script src="libs/signature.js"></script>
     <!--Library Files End-->
     <!-- Main File-->
     <script type="text/javascript" src="app.js"></script>
@@ -139,6 +141,7 @@
     <script type="text/javascript" src="modules/registerinvestor/registerInvestorConfig.js"></script>
     <script type="text/javascript" src="modules/registerinvestor/services/registerInvestorService.js"></script>
     <script type="text/javascript" src="modules/registerinvestor/controllers/registerInvestorController.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/controllers/registerSignitureController.js"></script>
     <!--Investor Register Module Start-->
     <!--Smart portfolio Module Start-->
     <script type="text/javascript" src="modules/smartportfolio/smartConfig.js"></script>
