--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="libs/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="libs/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" type="text/css" href="libs/datepicker.css">
+    <link rel="stylesheet" type="text/css" href="libs/video-js.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/videojs.record.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!-- <link rel="stylesheet" type="text/css" href="libs/animate.css"> -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -45,6 +47,10 @@
     <script src="libs/highcharts.min.js"></script>
     <script src="libs/signature_pad.min.js"></script>
     <script src="libs/signature.js"></script>
+    <script src="libs/getUserMedia.js"></script>
+    <script src="libs/video.min.js"></script>
+    <script src="libs/RecordRTC.js"></script>
+    <script src="libs/videojs.record.min.js"></script>
     <!--Library Files End-->
     <!-- Main File-->
     <script type="text/javascript" src="app.js"></script>
