Hook up assetAllocationCategory API, calculation of recommended SIp and corpus for custom SIP.

--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,7 @@
     <!--Goals Module Start-->
     <script type="text/javascript" src="modules/goals/goalConfig.js"></script>
     <script type="text/javascript" src="modules/goals/services/goalService.js"></script>
+    <script type="text/javascript" src="modules/goals/services/goalFormulaeService.js"></script>
     <script type="text/javascript" src="modules/goals/controllers/goalController.js"></script>
     <!--Retirement Goals Module Start-->
     <script type="text/javascript" src="modules/goals/modules/retirement/retirementGoalConfig.js"></script>
