Refactor controller code for goals into a prototype object

--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,7 @@
     <script type="text/javascript" src="modules/goals/services/goalService.js"></script>
     <script type="text/javascript" src="modules/goals/services/goalFormulaeService.js"></script>
     <script type="text/javascript" src="modules/goals/controllers/goalController.js"></script>
+    <script type="text/javascript" src="modules/goals/controllers/goalControllerPrototype.js"></script>
     <!--Retirement Goals Module Start-->
     <script type="text/javascript" src="modules/goals/modules/retirement/retirementGoalConfig.js"></script>
     <script type="text/javascript" src="modules/goals/modules/retirement/services/retirementGoalService.js"></script>
