--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,11 @@
     <script type="text/javascript" src="modules/registerinvestor/services/registerInvestorService.js"></script>
     <script type="text/javascript" src="modules/registerinvestor/controllers/registerInvestorController.js"></script>
     <script type="text/javascript" src="modules/registerinvestor/controllers/registerSignitureController.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/controllers/registerInvestorControllerPrototype.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/investorInfo/services/investorInfoService.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/investorInfo/controllers/investorInfoController.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/bankInfo/services/bankInfoService.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/bankInfo/controllers/bankInfoController.js"></script>
     <!--Investor Register Module Start-->
     <!--Smart portfolio Module Start-->
     <script type="text/javascript" src="modules/smartportfolio/smartConfig.js"></script>
