Add identity, nominee, contact infos

--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,12 @@
     <script type="text/javascript" src="modules/registerinvestor/modules/investorInfo/controllers/investorInfoController.js"></script>
     <script type="text/javascript" src="modules/registerinvestor/modules/bankInfo/services/bankInfoService.js"></script>
     <script type="text/javascript" src="modules/registerinvestor/modules/bankInfo/controllers/bankInfoController.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/identityInfo/services/identityInfoService.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/identityInfo/controllers/identityInfoController.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/nomineeInfo/services/nomineeInfoService.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/nomineeInfo/controllers/nomineeInfoController.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/contactInfo/services/contactInfoService.js"></script>
+    <script type="text/javascript" src="modules/registerinvestor/modules/contactInfo/controllers/contactInfoController.js"></script>
     <!--Investor Register Module Start-->
     <!--Smart portfolio Module Start-->
     <script type="text/javascript" src="modules/smartportfolio/smartConfig.js"></script>
