Fixed calendar issue, fixed tab index issue in swiper, added jewellery goal, completed scheme factsheet graphs and other stuffs, integrated other pending graphs, fixed logout issue

--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,11 @@
     <script type="text/javascript" src="modules/goals/modules/others/services/othersService.js"></script>
     <script type="text/javascript" src="modules/goals/modules/others/controllers/othersController.js"></script>
     <!--Others Goals Module End-->
+    <!--Jewellery Goals Module Start-->
+    <script type="text/javascript" src="modules/goals/modules/jewellery/jewelleryConfig.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/jewellery/services/jewelleryService.js"></script>
+    <script type="text/javascript" src="modules/goals/modules/jewellery/controllers/jewelleryController.js"></script>
+    <!--Jewellery Goals Module End-->
     <!--Goals Module End-->
     <!--Investor Register Module Start-->
     <script type="text/javascript" src="modules/registerinvestor/registerInvestorConfig.js"></script>
