--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" type="text/css" href="libs/video-js.min.css">
     <link rel="stylesheet" type="text/css" href="libs/videojs.record.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" href="libs/ngDialog.min.css">
+    <link rel="stylesheet" href="libs/ngDialog-theme-default.css">
+
     <!-- <link rel="stylesheet" type="text/css" href="libs/animate.css"> -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,6 +54,7 @@
     <script src="libs/video.min.js"></script>
     <script src="libs/RecordRTC.js"></script>
     <script src="libs/videojs.record.min.js"></script>
+    <script src="libs/ngDialog.min.js"></script>
     <!--Library Files End-->
     <!-- Main File-->
     <script type="text/javascript" src="app.js"></script>
