Google Login refactored to work with Gooogle Signin button in registration screen

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
     <!--Common Module End-->    
     <!--Authentication Module Start-->
     <script type="text/javascript" src="modules/authentication/authConfig.js"></script>
+    <script type="text/javascript" src="modules/authentication/controllers/authControllerPrototype.js"></script>
     <script type="text/javascript" src="modules/authentication/controllers/authController.js"></script>
     <script type="text/javascript" src="modules/authentication/services/authService.js"></script>
     <!--Authentication Module End-->
