Change app name, fix Issues

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0">
     <!-- <base href="/"> -->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Finaskus</title>
+    <title>FinAskUs</title>
     <link rel="stylesheet" type="text/css" href="libs/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="libs/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="libs/jquery.mCustomScrollbar.min.css">
