Fixed few responsive bugs and issues

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
     <script type="text/javascript" src="libs/angular-resource.min.js"></script>
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angular-sanitize.min.js"></script>
-    <script type="text/javascript" src="libs/swiper.jquery.min.js"></script> 
+    <script type="text/javascript" src="libs/swiper.jquery.js"></script> 
     <script type="text/javascript" src="libs/angular-lazy-img.min.js"></script>   
     <script type="text/javascript" src="libs/ng-google-signin.min.js"></script>     
     <script src="libs/jquery.mCustomScrollbar.concat.min.js"></script>
