--- a/app/index.html
+++ b/app/index.html
@@ -187,6 +187,16 @@
     <script type="text/javascript" src="modules/trackperformance/trackPerformanceConfig.js"></script>
     <script type="text/javascript" src="modules/trackperformance/services/trackPerformanceService.js"></script>
     <script type="text/javascript" src="modules/trackperformance/controllers/trackPerformanceController.js"></script>
+    <script type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-79265201-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <!--Smart portfolio Module End-->
   </body>
   <div class="modal fade" id="sessionLogoutModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
